--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.6",
+    "framer-motion": "^12.4.3",
     "next": "^15.1.7",
     "next-themes": "^0.2.1",
+    "nvm": "^0.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^4.10.1",
-    "react-scroll": "^1.8.9",
     "typescript": "4.9.4"
   },
   "devDependencies": {
