--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.6",
     "framer-motion": "^12.4.3",
+    "lucide-react": "^0.546.0",
     "next": "^15.1.7",
     "next-themes": "^0.2.1",
     "nvm": "^0.0.4",
